# mild_hri_ros

./: .gitignore  .gitmodules  848x480.json  CMakeLists.txt  README.md  bp_latents_dataset.npz  bp_latents_dataset_hs.npz  bp_latents_realtime.npz  bp_latents_realtime_hs.npz  mild_v3_2_pepper_nuisi.pth  package.xml
config/: hri.rviz  nuitrack_pepper_tf.yaml  pepper_dcm.yaml
launch/: ar_track.launch  nuitrack.launch  nuitrack_node.launch  pepper_bringup.launch  prepare_hri.launch  prepare_hri23.launch
models/: handshake_hands.npy  handshake_hri.npy  handshake_hri_nojointvel.npy  rocket_hands.npy  rocket_hri.npy  rocket_hri_nojointvel.npy
resources/pepper/: pepper.urdf
src/: base_ik.py  base_ik_controller.py  base_ik_node.py  bp_hr_node.py  bp_latent_plotter.py  bp_pepper_visualizer.py  gpt_hri.py  hri_ik.py  hsmmik_controller.py  mild_hh.py  mild_hh_vis.py  mild_hr_node.py  node.py  nuitrack_node.py  pepper_ikpy.py  pepper_teleop.py  pepper_visualizer.py  preproc.py  reset_pepper.py  stop_pepper_breathing.py  taskspace_hsmm_controller.py  test_fistbump_hardcoded.py  test_hand.py  test_handshake_hardcoded.py  test_hri_ik.py  test_hri_ik_moveit.py  test_hri_ik_ros.py  test_hri_ik_ros_LQR.py  test_hri_noik_ros.py  test_hri_qi.py  test_hri_sim.py  test_hri_sim_ik.py  test_hri_simmoveit_ik.py  test_rviz_ellipse.py  train_hands.py  train_hri.py  training_run.py  vae.py  webcam_view.py
src/bp_hri/: __init__.py  config.py  utils.py
src/bp_hri/networks/: __init__.py  hri_dynamics.py  tdm.py  vae.py
src/utils/: __init__.py  helper.py  nuitrack.py  pbd.py  robot.py  visualization.py
