<?xml version="1.0"?>
<package format="2">
  <name>segmint-ik</name>
  <version>0.0.0</version>
  <description>SegmInt-IK: Segmenting Interactions for Inverse Kinematic Adaptation of Physically Interactive Gestures</description>

  <maintainer email="vignesh.prasad@tu-darmstadt.de">Vignesh Prasad</maintainer>
  <license>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</license>

  <url type="website">https://sites.google.com/view/segmint-ik</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>image_transport</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  
</package>
